--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #1a1a1a;
-      color: #fff;
+      background-color: #ffffff; /* Cambiado a blanco */
+      color: #1a1a1a;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -52,7 +52,7 @@
     hr {
       width: 100%;
       border: none;
-      border-top: 1px solid #444;
+      border-top: 1px solid #ccc;
       margin: 20px 0;
     }
 
@@ -77,17 +77,17 @@
     }
 
     .message {
-      background: #2a2a2a;
+      background: #f2f2f2;
       padding: 15px;
       border-radius: 10px;
       margin: 20px 0;
       font-size: 16px;
-      color: #fff;
+      color: #333;
     }
 
     .whatsapp-button {
-      background-color: #D4AF37;
-      color: #1a1a1a;
+      background-color: #25D366; /* Verde oficial WhatsApp */
+      color: white;
       padding: 18px 30px;
       border-radius: 50px;
       font-weight: bold;
@@ -97,7 +97,7 @@
       justify-content: center;
       margin-bottom: 20px;
       font-size: 18px;
-      box-shadow: 0 4px 15px rgba(212, 175, 55, 0.4);
+      box-shadow: 0 4px 15px rgba(37, 211, 102, 0.4);
       border: none;
       cursor: pointer;
       position: relative;
@@ -114,7 +114,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #bfa437;
+      background-color: #1ebe5d;
       z-index: -1;
       transform: scaleX(0);
       transform-origin: right;
@@ -123,9 +123,9 @@
 
     .whatsapp-button:hover {
       transform: translateY(-3px);
-      box-shadow: 0 0 15px #D4AF37, 
-                  0 0 25px rgba(212, 175, 55, 0.6),
-                  0 0 35px rgba(212, 175, 55, 0.3);
+      box-shadow: 0 0 15px #25D366, 
+                  0 0 25px rgba(37, 211, 102, 0.6),
+                  0 0 35px rgba(37, 211, 102, 0.3);
     }
 
     .whatsapp-button:hover::before {
@@ -144,13 +144,13 @@
 
     @keyframes pulse {
       0% {
-        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.7);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
       }
       70% {
-        box-shadow: 0 0 0 15px rgba(212, 175, 55, 0);
+        box-shadow: 0 0 0 15px rgba(37, 211, 102, 0);
       }
       100% {
-        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
       }
     }
 
@@ -159,8 +159,8 @@
     }
 
     .clientes {
-      background-color: #444;
-      color: #fff;
+      background-color: #e5e5e5;
+      color: #1a1a1a;
       padding: 12px 20px;
       border-radius: 30px;
       font-weight: 600;
@@ -174,7 +174,7 @@
       border-radius: 10px;
       margin-bottom: 10px;
       text-align: center;
-      color: #ccc;
+      color: #333;
     }
 
     .trustpilot img {
